kajit/src/snapshots/kajit__disasm_tests__disasm_postcard_all_scalars_aarch64.snap
---
source: src/disasm_tests.rs
expression: out
---
=== postcard/all_scalars ===
> sub sp, sp, #0x40
  stp x29, x30, [sp]
  stp x19, x20, [sp, #0x10]
  stp x21, x22, [sp, #0x20]
  mov x29, sp
  mov x21, x0
  mov x22, x1
  ldr x19, [x22]
  ldr x20, [x22, #0x8]
  cmp x19, x20
  b.hs $+0x2c
  ldrb w9, [x19]
  cmp w9, #0x1
  b.hi $+0x8
  b $+0x10
  mov w9, #0xd
  str w9, [x22, #0x10]
  b $+0x3bc
  strb w9, [x21, #0x40]
  add x19, x19, #0x1
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x3a4
  cmp x19, x20
  b.hs $+0x14
  ldrb w9, [x19]
  strb w9, [x21, #0x41]
  add x19, x19, #0x1
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x380
  cmp x19, x20
  b.hs $+0x48
  ldrb w9, [x19]
  tbnz w9, #0x7, $+0x10
  add x19, x19, #0x1
  strh w9, [x21, #0x3c]
  b $+0x30
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x3c
  mov x8, #<imm>
  movk x8, #<imm>, lsl #16
  movk x8, #<imm>, lsl #32
  movk x8, #<imm>, lsl #48
  blr x8
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x338
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x328
  cmp x19, x20
  b.hs $+0x48
  ldrb w9, [x19]
  tbnz w9, #0x7, $+0x10
  add x19, x19, #0x1
  str w9, [x21, #0x30]
  b $+0x30
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x30
  mov x8, #<imm>
  movk x8, #<imm>, lsl #16
  movk x8, #<imm>, lsl #32
  movk x8, #<imm>, lsl #48
  blr x8
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x2e0
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x2d0
  cmp x19, x20
  b.hs $+0x48
  ldrb w9, [x19]
  tbnz w9, #0x7, $+0x10
  add x19, x19, #0x1
  str x9, [x21, #0x18]
  b $+0x30
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x18
  mov x8, #<imm>
  movk x8, #<imm>, lsl #16
  movk x8, #<imm>, lsl #32
  movk x8, #<imm>, lsl #48
  blr x8
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x288
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x278
  cmp x19, x20
  b.hs $+0x14
  ldrb w9, [x19]
  strb w9, [x21, #0x42]
  add x19, x19, #0x1
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x254
  cmp x19, x20
  b.hs $+0x58
  ldrb w9, [x19]
  tbnz w9, #0x7, $+0x20
  add x19, x19, #0x1
  lsr w10, w9, #0x1
  and w11, w9, #0x1
  neg w11, w11
  eor w9, w10, w11
  strh w9, [x21, #0x3e]
  b $+0x30
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x3e
  mov x8, #<imm>
  movk x8, #<imm>, lsl #16
  movk x8, #<imm>, lsl #32
  movk x8, #<imm>, lsl #48
  blr x8
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x1fc
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x1ec
  cmp x19, x20
  b.hs $+0x58
  ldrb w9, [x19]
  tbnz w9, #0x7, $+0x20
  add x19, x19, #0x1
  lsr w10, w9, #0x1
  and w11, w9, #0x1
  neg w11, w11
  eor w9, w10, w11
  str w9, [x21, #0x34]
  b $+0x30
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x34
  mov x8, #<imm>
  movk x8, #<imm>, lsl #16
  movk x8, #<imm>, lsl #32
  movk x8, #<imm>, lsl #48
  blr x8
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x194
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x184
  cmp x19, x20
  b.hs $+0x58
  ldrb w9, [x19]
  tbnz w9, #0x7, $+0x20
  add x19, x19, #0x1
  lsr w10, w9, #0x1
  and w11, w9, #0x1
  neg w11, w11
  eor w9, w10, w11
  str x9, [x21, #0x20]
  b $+0x30
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x20
  mov x8, #<imm>
  movk x8, #<imm>, lsl #16
  movk x8, #<imm>, lsl #32
  movk x8, #<imm>, lsl #48
  blr x8
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x12c
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x11c
  sub x9, x20, x19
  cmp x9, #0x4
  b.lo $+0x14
  ldr w9, [x19]
  str w9, [x21, #0x38]
  add x19, x19, #0x4
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0xf4
  sub x9, x20, x19
  cmp x9, #0x8
  b.lo $+0x14
  ldr x9, [x19]
  str x9, [x21, #0x28]
  add x19, x19, #0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0xcc
  cmp x19, x20
  b.hs $+0xa0
  ldrb w9, [x19]
  tbnz w9, #0x7, $+0xc
  add x19, x19, #0x1
  b $+0x34
  str x19, [x22]
  mov x0, x22
  add x1, sp, #0x30
  mov x8, #<imm>
  movk x8, #<imm>, lsl #16
  movk x8, #<imm>, lsl #32
  movk x8, #<imm>, lsl #48
  blr x8
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x88
  ldr w9, [sp, #0x30]
  str w9, [sp, #0x30]
  sub x10, x20, x19
  cmp x10, x9
  b.lo $+0x50
  mov x10, x19
  str x19, [x22]
  mov x0, x22
  mov x1, x10
  mov w2, w9
  mov x8, #<imm>
  movk x8, #<imm>, lsl #16
  movk x8, #<imm>, lsl #32
  movk x8, #<imm>, lsl #48
  blr x8
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x44
  ldr w9, [sp, #0x30]
  str x0, [x21, #0x8]
  str x9, [x21, #0x10]
  str x9, [x21]
  add x19, x19, x9
  b $+0x4
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x1c
  str x19, [x22]
  ldp x21, x22, [sp, #0x20]
  ldp x19, x20, [sp, #0x10]
  ldp x29, x30, [sp]
  add sp, sp, #0x40
  ret
  ldp x21, x22, [sp, #0x20]
  ldp x19, x20, [sp, #0x10]
  ldp x29, x30, [sp]
  add sp, sp, #0x40
  ret
