kajit/src/snapshots/kajit__disasm_tests__disasm_postcard_vec_x86_64.snap
---
source: src/disasm_tests.rs
expression: out
---
=== postcard/vec ===
  push rbp
  sub rsp, 0x60
  mov qword [rsp], rbp
  mov qword [rsp + 0x10], r12
  mov qword [rsp + 0x18], r13
  mov qword [rsp + 0x20], r14
  mov qword [rsp + 0x28], r15
  mov r14, rdi
  mov r15, rsi
  mov r12, qword [r15]
  mov r13, qword [r15 + 0x8]
  cmp r12, r13
  jnb $+0x5d
  movzx r10d, byte [r12]
  test r10d, 0x80
  jnz $+0x9
  add r12, 0x1
  jmp $+0x52
  mov qword [r15], r12
  mov rdi, r15
  lea rsi, qword [rsp + 0x30]
  mov rax, 0x<imm>
  call rax
  mov r12, qword [r15]
  mov r11d, dword [r15 + 0x10]
  test r11d, r11d
  jnz $+0x202
  mov r10d, dword [rsp + 0x30]
  jmp $+0x10
  mov dword [r15 + 0x10], 0x1
  jmp $+0x1e5
  test r10d, r10d
  jz $+0x153
  mov qword [rsp + 0x48], r10
  mov qword [r15], r12
  mov rdi, r15
  mov rsi, r10
  mov edx, 0x4
  mov ecx, 0x4
  mov rax, 0x<imm>
  call rax
  mov r12, qword [r15]
  mov r10d, dword [r15 + 0x10]
  test r10d, r10d
  jnz $+0x19a
  mov qword [rsp + 0x38], r14
  mov qword [rsp + 0x40], rax
  mov qword [rsp + 0x50], rbx
  mov rbx, rax
  mov r10, qword [rsp + 0x48]
  imul r10, r10, 0x4
  add r10, rax
  mov qword [rsp + 0x58], r10
  cmp r12, r13
  jnb $+0x81
  movzx r10d, byte [r12]
  add r12, 0x1
  test r10d, 0x80
  jnz $+0x1d
  mov dword [rbx], r10d
  add rbx, 0x4
  cmp rbx, qword [rsp + 0x58]
  jb $-0x37
  jmp $+0x5e
  sub r12, 0x1
  mov qword [r15], r12
  mov rdi, r15
  mov rsi, rbx
  mov rax, 0x<imm>
  call rax
  mov r12, qword [r15]
  mov r10d, dword [r15 + 0x10]
  test r10d, r10d
  jnz $+0x92
  add rbx, 0x4
  cmp rbx, qword [rsp + 0x58]
  jb $-0x85
  jmp $+0x10
  mov dword [r15 + 0x10], 0x1
  jmp $+0x68
  mov rbx, qword [rsp + 0x50]
  mov r14, qword [rsp + 0x38]
  mov rax, qword [rsp + 0x40]
  mov qword [r14 + 0x8], rax
  mov rax, qword [rsp + 0x48]
  mov qword [r14 + 0x10], rax
  mov rax, qword [rsp + 0x48]
  mov qword [r14], rax
  jmp $+0x61
  mov qword [r14 + 0x8], 0x4
  mov qword [r14 + 0x10], 0x0
  mov qword [r14], 0x0
  jmp $+0x3b
  mov rbx, qword [rsp + 0x50]
  mov r14, qword [rsp + 0x38]
  mov rdi, qword [rsp + 0x40]
  mov rsi, qword [rsp + 0x48]
  mov edx, 0x4
  mov ecx, 0x4
  mov rax, 0x<imm>
  call rax
  jmp $+0x28
  mov qword [r15], r12
  mov r15, qword [rsp + 0x28]
  mov r14, qword [rsp + 0x20]
  mov r13, qword [rsp + 0x18]
  mov r12, qword [rsp + 0x10]
  mov rbp, qword [rsp]
  add rsp, 0x60
  pop rbp
  ret
  mov r15, qword [rsp + 0x28]
  mov r14, qword [rsp + 0x20]
  mov r13, qword [rsp + 0x18]
  mov r12, qword [rsp + 0x10]
  mov rbp, qword [rsp]
  add rsp, 0x60
  pop rbp
  ret
